--- a/force-app/main/default/classes/OpenAPIStorageQueueable.cls
+++ b/force-app/main/default/classes/OpenAPIStorageQueueable.cls
@@ -22,6 +22,7 @@ public class OpenAPIStorageQueueable implements Queueable, Database.AllowsCallou
      */
     public void execute(QueueableContext context) {
         try {
+            // Store the specification
             storeAsStaticResource(spec, resourceName);
             System.debug('Successfully stored OpenAPI spec as Static Resource: ' + resourceName);
         } catch (Exception e) {
@@ -36,65 +37,66 @@ public class OpenAPIStorageQueueable implements Queueable, Database.AllowsCallou
      * @param resourceName The name of the Static Resource
      */
     private void storeAsStaticResource(Map<String, Object> spec, String resourceName) {
-        // Convert spec to JSON string with some optimizations for large specs
-        String jsonSpec = JSON.serialize(spec); // Using serialize instead of serializePretty for large specs
-        
-        // First try to get the existing Static Resource
-        HttpRequest getReq = new HttpRequest();
-        getReq.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/query?q=SELECT+Id+FROM+StaticResource+WHERE+Name=\'' + resourceName + '\'');
-        getReq.setMethod('GET');
-        getReq.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
-        
-        Http http = new Http();
-        HttpResponse getRes = http.send(getReq);
-        
-        String resourceId = null;
-        if (getRes.getStatusCode() == 200) {
-            Map<String, Object> queryResult = (Map<String, Object>)JSON.deserializeUntyped(getRes.getBody());
-            List<Object> records = (List<Object>)queryResult.get('records');
-            if (!records.isEmpty()) {
-                Map<String, Object> record = (Map<String, Object>)records[0];
-                resourceId = (String)record.get('Id');
+        try {
+            // Convert spec to JSON string
+            String jsonSpec = JSON.serializePretty(spec);
+            
+            // First try to get the existing Static Resource
+            HttpRequest getReq = new HttpRequest();
+            getReq.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/query?q=SELECT+Id+FROM+StaticResource+WHERE+Name=\'' + resourceName + '\'');
+            getReq.setMethod('GET');
+            getReq.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
+            
+            Http http = new Http();
+            HttpResponse getRes = http.send(getReq);
+            
+            String resourceId = null;
+            if (getRes.getStatusCode() == 200) {
+                Map<String, Object> queryResult = (Map<String, Object>)JSON.deserializeUntyped(getRes.getBody());
+                List<Object> records = (List<Object>)queryResult.get('records');
+                if (!records.isEmpty()) {
+                    Map<String, Object> record = (Map<String, Object>)records[0];
+                    resourceId = (String)record.get('Id');
+                }
             }
-        }
-        
-        // Create or update the Static Resource
-        HttpRequest req = new HttpRequest();
-        if (resourceId != null) {
-            // Update existing resource
-            req.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/sobjects/StaticResource/' + resourceId);
-            req.setMethod('PATCH');
-        } else {
-            // Create new resource
-            req.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/sobjects/StaticResource');
-            req.setMethod('POST');
-        }
-        
-        req.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
-        req.setHeader('Content-Type', 'application/json');
-        
-        // Check if the spec might be too large for a single Static Resource (5MB limit)
-        Blob jsonBlob = Blob.valueOf(jsonSpec);
-        if (jsonBlob.size() > 4.5 * 1024 * 1024) { // 4.5MB warning threshold
-            System.debug(LoggingLevel.WARN, 'WARNING: OpenAPI specification is approaching the 5MB Static Resource limit: ' + 
-                         (jsonBlob.size() / (1024.0 * 1024.0)).setScale(2) + 'MB');
-        }
-        
-        // Create the Static Resource body with correct field names
-        Map<String, Object> body = new Map<String, Object>{
-            'Name' => resourceName,
-            'ContentType' => 'application/json',
-            'CacheControl' => 'Public',
-            'Body' => EncodingUtil.base64Encode(jsonBlob)
-        };
-        
-        req.setBody(JSON.serialize(body));
-        
-        HttpResponse res = http.send(req);
-        
-        if (res.getStatusCode() != 201 && res.getStatusCode() != 204) {
-            throw new OpenAPIParser.OpenAPIParserException('Failed to ' + (resourceId != null ? 'update' : 'create') + 
-                                                         ' Static Resource: ' + res.getBody());
+            
+            // Create or update the Static Resource
+            HttpRequest req = new HttpRequest();
+            if (resourceId != null) {
+                // Update existing resource
+                req.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/sobjects/StaticResource/' + resourceId);
+                req.setMethod('PATCH');
+            } else {
+                // Create new resource
+                req.setEndpoint(URL.getOrgDomainUrl().toExternalForm() + '/services/data/v62.0/tooling/sobjects/StaticResource');
+                req.setMethod('POST');
+            }
+            
+            req.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
+            req.setHeader('Content-Type', 'application/json');
+            
+            // Create the Static Resource body with correct field names
+            Map<String, Object> body = new Map<String, Object>{
+                'Name' => resourceName,
+                'ContentType' => 'application/json',
+                'CacheControl' => 'Public',
+                'Body' => EncodingUtil.base64Encode(Blob.valueOf(jsonSpec))
+            };
+            
+            req.setBody(JSON.serialize(body));
+            
+            HttpResponse res = http.send(req);
+            
+            if (res.getStatusCode() != 201 && res.getStatusCode() != 204) {
+                throw new OpenAPIParser.OpenAPIParserException('Failed to ' + (resourceId != null ? 'update' : 'create') + 
+                                                           ' Static Resource: ' + res.getBody());
+            }
+            
+            System.debug('Successfully ' + (resourceId != null ? 'updated' : 'created') + ' static resource ' + resourceName);
+        } catch (Exception e) {
+            System.debug(LoggingLevel.ERROR, 'Error storing OpenAPI spec: ' + e.getMessage());
+            System.debug(LoggingLevel.ERROR, e.getStackTraceString());
+            throw e; // Re-throw to make sure the error is properly reported
         }
     }
 } 
